<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <EditText
        android:id="@+id/newTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/new_title" />

    <EditText
        android:id="@+id/newAutorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newTitleText"
        android:background="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/new_autor" />

    <EditText
        android:id="@+id/newEditorialText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newAutorText"
        android:background="@null"
        android:hint="@string/new_editorial"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/newPrecioText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newAutorText"
        android:layout_marginTop="23dp"
        android:background="@null"
        android:hint="@string/new_precio"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/newCategoriaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newAutorText"
        android:layout_marginTop="46dp"
        android:background="@null"
        android:hint="@string/new_categoria"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/newAñoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newEditorialText"
        android:layout_marginTop="47dp"
        android:background="@null"
        android:hint="@string/new_año"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newAñoText"
        android:textSize="16sp"
        android:layout_alignParentEnd="false"
        android:background="@android:color/transparent"
        android:text="@string/new_imagen"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_below="@id/newAñoText"
        android:layout_alignRight="@id/newAñoText"/>"

    <Button
        android:id="@+id/newButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

</RelativeLayout>